--- a/templates/pagina_detalhes_materias.html
+++ b/templates/pagina_detalhes_materias.html
@@ -7,22 +7,21 @@
     {{ bootstrap.load_css() }}
 </head>
 <body>
-    <div class="container">
-        <!-- Informações do Senador -->
-        <div class="mb-4">
-            <h1>{{ senador_selecionado['NomeParlamentar'] }}</h1>
-            <p>Partido: {{ senador_selecionado['SiglaPartidoParlamentar'] }}</p>
-            <p>Estado: {{ senador_selecionado['UfParlamentar'] }}</p>
-        </div>
+    <div class="container-fluid content">
 
-        <!-- Botão Voltar -->
-        <div class="mb-4">
-            <a href="{{ url_for('pagina_detalhes', id=senador_selecionado['CodigoParlamentar']) }}" class="btn btn-primary">Voltar</a>
-        </div>
+        <!-- Incluir Cabeçalho -->
+        {% include 'header.html' %}
 
+        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="{{ url_for('pagina_detalhes', id=senador['CodigoParlamentar']) }}">Início</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Detalhes da matéria</li>
+            </ol>
+          </nav>
+        
         <!-- Detalhes da Matéria -->
         <div class="my-4">
-            <h2 class="mb-3">Detalhes da Matéria</h2>
+            <h2 class="mb-3">Detalhes da matéria</h2>
             <ul class="list-group">
                 <li class="list-group-item">
                     <h3 class="text-primary">{{ materia['Identificacao'] }}
@@ -43,25 +42,35 @@
             </ul>
             
             <!-- Matérias similares sugeridas para este interesse -->
-            <h6 class="mt-3 text-secondary">Matérias Similares Sugeridas:</h6>
+            <h4 class="mt-3 text-secondary">Matérias similares:</h4>
 
             <!-- Grade de colunas para cards de matérias similares -->
             <div class="row row-cols-1 row-cols-md-2 g-4">
-                {% for row in similares_sugeridas(materia['CodigoMateria'],senador_selecionado['CodigoParlamentar']).itertuples() %}
-                    <div class="col">
-                        <div class="card">
-                            <div class="card-body">
-                                <a href="{{ url_for('pagina_detalhes_materias', id=senador_selecionado['CodigoParlamentar'], codigo_materia = row.CodigoMateria) }}" class="btn btn-secondary">
-                                    <h6 class="card-title">{{ row.Identificacao }}</h6></a>
-                                <p class="card-text">{{ row.Ementa|truncate(200) }}</p>
-                            </div>
+                {% for row in similares_sugeridas(materia['CodigoMateria'],senador['CodigoParlamentar']).itertuples() %}
+                <div class="col">
+                    <div class="card flex-fill">
+                        <div class="card-body" style="text-align: center;">
+                            <a href="{{ url_for('pagina_detalhes_materias', id=senador['CodigoParlamentar'], codigo_materia = row.CodigoMateria) }}" class="btn btn-primary" style="width:80%;">
+                                
+                                    <h8>{{ row.Identificacao }}</h8>
+                                
+                            </a>
+                            <p class=".text-secondary"><center><small>Similaridade de {{ row.ValorSimilaridade }}%</small></center></p>
+                            <p class="card-text">{{ row.Ementa|truncate(200) }}</p>
+                            {% if row.justificativa_prioridade is not none %}
+                                <p class="text-primary"><strong>Oportunidade:</strong> {{ row.justificativa_prioridade }}</p>
+                            {% endif %}
                         </div>
                     </div>
+                </div>
                 {% endfor %}
             </div>
         
         </div>
     </div>
+
+      <!-- Incluir Rodapé -->
+      {% include 'footer.html' %}
     {{ bootstrap.load_js() }}
 </body>
 </html>
