--- a/templates/pagina_interesses.html
+++ b/templates/pagina_interesses.html
@@ -7,26 +7,23 @@
     {{ bootstrap.load_css() }}
 </head>
 <body>
-    <div class="container">
-        <!-- Informações Iniciais -->
-        <div class="mb-4">
-            <h1>{{ senador_selecionado['NomeParlamentar'] }}</h1>
-            <p>Partido: {{ senador_selecionado['SiglaPartidoParlamentar'] }}</p>
-            <p>Estado: {{ senador_selecionado['UfParlamentar'] }}</p>
-        </div>
+    <div class="container-fluid content">
 
-        <!-- Botões -->
-        <div class="mb-4">
-            <a href="{{ url_for('pagina_inicial') }}" class="btn btn-primary">Voltar à Página Inicial</a>
-        </div>
+        <!-- Incluir Cabeçalho -->
+        {% include 'header.html' %}
+       
+
 
         <!-- Meus Interesses -->
         <div class="my-4">
-            <h2 class="mb-3">Meus Interesses</h2>
+            <h2 class="mb-3">Atuação do Senador</h2>
+            <p class="text.text-white"><small>Matérias em que houve mais atuação do parlamentar, considerando autorias, relatorias, discursos e apresentação de emendas.</small></p>
+
+
             <ul class="list-group">
                 {% for interesse in interesses %}
                     <li class="list-group-item mb-3">
-                        <a href="{{ url_for('pagina_detalhes_materias', id=senador_selecionado['CodigoParlamentar'], codigo_materia = interesse['CodigoMateria']) }}" class="btn btn-primary">
+                        <a href="{{ url_for('pagina_detalhes_materias', id=senador['CodigoParlamentar'], codigo_materia = interesse['CodigoMateria']) }}" class="btn btn-primary">
                         <h5>{{ interesse['Identificacao'] }}</h5></a>
                         <div class="alert alert-info" role="alert">
                             <b>Ações realizadas na matéria:</b> {{ interesse['justificativa_interesse'] }}
@@ -35,25 +32,30 @@
                         
                         
                         <!-- Matérias similares sugeridas para este interesse -->
-                        <h6 class="mt-3 text-secondary">Matérias Similares Sugeridas:</h6>
+                        <h4 class="mt-3 text-secondary">Matérias similares:</h4>
                         
                         <!-- Grade de colunas para cards de matérias similares -->
-                        <div class="row row-cols-1 row-cols-md-3 g-4">
-                            {% for row in similares_sugeridas(interesse['CodigoMateria'],senador_selecionado['CodigoParlamentar']).itertuples() %}
-                                <div class="col">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <a href="{{ url_for('pagina_detalhes_materias', id=senador_selecionado['CodigoParlamentar'], codigo_materia = row.CodigoMateria) }}" class="btn btn-secondary">
-                                                <h6 class="card-title">{{ row.Identificacao }}</h6></a>
-                                            <p class="card-text">{{ row.Ementa|truncate(200) }}</p>
-                                             {% if row.justificativa_prioridade is not none %}
-                        <div class="p-1 mb-2 bg-info text-white"><strong>Oportunidade:</strong> {{ row.justificativa_prioridade }}</div>
-                    {% endif %}
-                                        </div>
+                        <div class="row row-cols-1 row-cols-md-3 g-4 d-flex">
+                            {% for row in similares_sugeridas(interesse['CodigoMateria'], senador['CodigoParlamentar']).itertuples() %}
+                            <div class="col">
+                                <div class="card flex-fill">
+                                    <div class="card-body" style="text-align: center;">
+                                        <a href="{{ url_for('pagina_detalhes_materias', id=senador['CodigoParlamentar'], codigo_materia = row.CodigoMateria) }}" class="btn btn-secondary" style="width:80%;">
+                                            
+                                                <h8>{{ row.Identificacao }}</h8>
+                                            
+                                        </a>
+                                        <p class=".text-secondary"><center><small>Similaridade de {{ row.ValorSimilaridade }}%</small></center></p>
+                                        <p class="card-text">{{ row.Ementa|truncate(200) }}</p>
+                                        {% if row.justificativa_prioridade is not none %}
+                                            <p class="text-primary"><strong>Oportunidade:</strong> {{ row.justificativa_prioridade }}</p>
+                                        {% endif %}
                                     </div>
                                 </div>
+                            </div>
                             {% endfor %}
                         </div>
+                        
                         
                         <!-- Linha horizontal -->
                         
@@ -62,6 +64,8 @@
             </ul>
         </div>
     </div>
+    <!-- Incluir Rodapé -->
+    {% include 'footer.html' %}
     {{ bootstrap.load_js() }}
 </body>
 </html>
