--- a/templates/footer.html
+++ b/templates/footer.html
@@ -20,6 +20,7 @@
     <body>
     <!-- Rodapé -->
     <div class="footer">
+        <a class="nav-link" href="{{ url_for('pagina_avaliacao', id=senador['CodigoParlamentar']) }}"><button type="button" class="btn btn-success">O que achou do sistema?</button></a>
         <a href="#"><p class="text-white">Voltar ao início</p></a>
         <p class="text-white"><small><i>Este sistema é um dos produtos da pesquisa em andamento de Carlos Rafael 
             no Mestrado Profissional em Poder Legislativo do CEFOR</small></i>
