--- a/templates/header.html
+++ b/templates/header.html
@@ -10,67 +10,105 @@
                 background-color: #f8f9fa; /* Cor de fundo semelhante à da Amazon */
             }
             .navbar {
+                display: flex;
                 background-color: #232f3e; /* Cor de fundo da barra superior */
                 color: #ffffff; /* Cor do texto na barra superior */
+                padding: 5px !important;
             }
             .navbar-logo {
-                
-                max-width: 25%;
+                margin-right: 10px;
+                margin-left: 10px;
+                max-width: 100%;
+
+                @media only screen and (min-width: 768px) {
+                    max-width: 25%;
+                    width: 25%;
+                    display: flex;
+                    flex-wrap: wrap;
+                    margin: 0px;
+                }
             }
-            .navbar-search {
-            flex: 0.8; /* Reduza o tamanho da barra de pesquisa (ajuste conforme necessário) */
-            margin-right: 10px; /* Adicione uma margem direita para espaçamento */
+            
+            .search-bar{
+                width: 100%;
+                margin-right: 10px;
+                margin-left: 10px;
+
+                @media only screen and (min-width: 768px) {
+                    max-width: 50%;
+                    width: 50%;
+                    display: flex;
+                    flex-wrap: wrap;
+                    margin: 0px;
+                }
             }
-            .navbar-user-info {
-                max-width: 25%;
+            .user-info {
+                width: 100%;
                 text-align: center; /* Alinha as informações do usuário à direita */
                 margin-right: 10px;
+
+                @media only screen and (min-width: 768px) {
+                    max-width: 25%;
+                    width: 25%;
+                    
+                    margin: 0px;
+                }
+
+            }
+
+            .meuform{
+                width: 80%;
+                margin:auto;
+            }
+
+            .info{
+                margin: 0px;
             }
 
             .content {
             margin-top: 20px; /* Adiciona um espaço entre a barra superior e o conteúdo */
-        }
-        .footer {
-            
-            text-align: center;
-            padding: 5px;
-            background-color: #232f3e; /* Cor de fundo do rodapé */
-            color: #ffffff; /* Cor do texto no rodapé */
-            margin: 10px;
-        }
+            }
+            .footer {
+                
+                text-align: center;
+                padding: 5px;
+                background-color: #232f3e; /* Cor de fundo do rodapé */
+                color: #ffffff; /* Cor do texto no rodapé */
+                margin: 10px;
+            }
 
-        .input-group-append button {
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-        }
-        .thumbs-up,
-        .thumbs-down {
-            opacity: 0.5;
-        }
+            .input-group-append button {
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+            }
+            .thumbs-up,
+            .thumbs-down {
+                opacity: 0.5;
+            }
 
-        .thumbs-up.votado,
-        .thumbs-down.votado {
-            opacity: 1;
-        }
+            .thumbs-up.votado,
+            .thumbs-down.votado {
+                opacity: 1;
+            }
 
-        .menu {
-    display: flex;    
-    background-color: #526882; /* Cor de fundo do menu */
-    padding: 10px;
-}
+            .menu {
+                display: flex;    
+                background-color: #526882; /* Cor de fundo do menu */
+                padding: 10px;
+            }
 
-.menu a {
-    text-decoration: none; /* Remove sublinhado padrão de links */
-    color: #fff; /* Cor do texto do link */
-    padding: 8px 16px; /* Espaçamento interno do link */
-    border-radius: 5px; /* Borda arredondada */
-    transition: background-color 0.3s; /* Adiciona uma transição suave à cor de fundo */
+            .menu a {
+                text-decoration: none; /* Remove sublinhado padrão de links */
+                color: #fff; /* Cor do texto do link */
+                padding: 8px 16px; /* Espaçamento interno do link */
+                border-radius: 5px; /* Borda arredondada */
+                transition: background-color 0.3s; /* Adiciona uma transição suave à cor de fundo */
 
-}
+            }
 
-.menu a:hover {
-    background-color: rgb(112, 110, 110); /* Cor de fundo ao passar o mouse */
-}
+            .menu a:hover {
+                background-color: rgb(112, 110, 110); /* Cor de fundo ao passar o mouse */
+            }
 
     
 
@@ -86,10 +124,11 @@
             <img src="{{ url_for('static', filename='cover.png') }}" alt="Logo" class="img-fluid">
             </a>
         </div>
-        <div class="navbar-search">
+        
+        <div class="search-bar">
             <!-- Caixa de Pesquisa -->
            <!-- Caixa de Pesquisa com Ícone de Lupa na Mesma Linha -->
-        <form class="form-inline mt-3 mb-3" action="{{ url_for('pesquisar_similares', id=senador['CodigoParlamentar'])}}" method="get">
+        <form class="form-inline meuform mt-3 mb-3" action="{{ url_for('pesquisar_similares', id=senador['CodigoParlamentar'])}}" method="get">
             <div class="input-group">
                 <input class="form-control w-75" type="search" placeholder="Pesquisar" aria-label="Pesquisar" id="search-input" name="query">
                 
@@ -104,11 +143,11 @@
         
 
         </div>
-        <div class="navbar-user-info">
+        <div class="user-info">
             <!-- Informações do Senador -->
-            <p class="h5 text-white"><strong>{{ senador['NomeParlamentar'] }}</strong></p>
-            <p class="text-white">Partido: {{ senador['SiglaPartidoParlamentar'] }}</p>
-            <p class="text-white">Estado: {{ senador['UfParlamentar'] }}</p>
+            <p class="h5 text-white info"><strong>{{ senador['NomeParlamentar'] }}</strong></p>
+            <p class="text-white info">Partido: {{ senador['SiglaPartidoParlamentar'] }}</p>
+            <p class="text-white info">Estado: {{ senador['UfParlamentar'] }}</p>            
             <a class="nav-link" href="{{ url_for('pagina_avaliacao', id=senador['CodigoParlamentar']) }}"><button type="button" class="btn btn-success">O que achou do sistema?</button></a>
         </div>
 
