Mais uma pergunta

--- a/templates/avaliacao.html
+++ b/templates/avaliacao.html
@@ -99,8 +99,34 @@
                 
                 <!-- Pergunta 3 -->
                 <div class="form-group mb-4">
-                    <label for="pergunta3" style="font-weight: bold;">Se desejar, escreva livremente o que achou do sistema</label>                    
-                    <textarea class="form-control" id="pergunta3" name="pergunta3" rows="3"></textarea>
+                    <label for="pergunta3" style="font-weight: bold;">Que percentual aproximado de esforço na busca por matérias é reduzido com a utilização do sistema?</label>
+                    <div class="custom-control custom-radio custom-control-inline">
+                        <input type="radio" id="p3_opcao1" name="pergunta3" class="custom-control-input" value="1">
+                        <label class="custom-control-label" for="p3_opcao1">1 - 0%</label>
+                    </div>
+                    <div class="custom-control custom-radio custom-control-inline">
+                        <input type="radio" id="p3_opcao2" name="pergunta3" class="custom-control-input" value="2">
+                        <label class="custom-control-label" for="p3_opcao2">2 - 25%</label>
+                    </div>
+                    <div class="custom-control custom-radio custom-control-inline">
+                        <input type="radio" id="p3_opcao3" name="pergunta3" class="custom-control-input" value="3">
+                        <label class="custom-control-label" for="p3_opcao3">3 - 50%</label>
+                    </div>
+                    <div class="custom-control custom-radio custom-control-inline">
+                        <input type="radio" id="p3_opcao4" name="pergunta3" class="custom-control-input" value="4">
+                        <label class="custom-control-label" for="p4_opcao4">4 - 75%</label>
+                    </div>
+                    <div class="custom-control custom-radio custom-control-inline">
+                        <input type="radio" id="p3_opcao5" name="pergunta3" class="custom-control-input" value="5">
+                        <label class="custom-control-label" for="p3_opcao5">5 - 100%</label>
+                    </div>
+                    <!-- Continue para as outras opções -->
+                </div>
+
+                <!-- Pergunta 4 -->
+                <div class="form-group mb-4">
+                    <label for="pergunta4" style="font-weight: bold;">Se desejar, escreva livremente o que achou do sistema</label>                    
+                    <textarea class="form-control" id="pergunta4" name="pergunta4" rows="3"></textarea>
                 </div>
 
                 <!-- Botão de Envio -->
